--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.9.8",
     "@nestjs/platform-express": "^7.5.1",
+    "apollo-server-express": "^2.19.2",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
+    "graphql": "^15.4.0",
+    "graphql-query-complexity": "^0.7.2",
+    "graphql-tools": "^7.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -37,6 +44,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "apollo-server": "^2.19.2",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
